@@ -22,6 +22,7 @@ protected slots:
 protected:
     virtual void layerAddedEvent();
     virtual void layerDeletedEvent(int layer);
+    virtual void layerMovedEvent(int layer, int new_position);
     virtual void layerSelectedEvent(int layer);
 
 private:
